2009-11-30  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12541: Unescaped & in urls of list module

2009-11-30  Oliver Hader  <oliver@typo3.org>

	* Branching TYPO3 4.3.0 to TYPO3_4-3

2009-11-30  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Updated ext_emconf.php files in system extensions

2009-11-29  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #9683: Store OpenID information in database	instead of using the filesystem

2009-11-29  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12836: Recycler: Still one error with labels in JavaScript
	* Fixed bug #12839: TS property pageRenderTemplateFile needs to be renamed
	* Fixed bug #12827: Core labels need to be utf-8 before json_encode
	* Fixed bug #12828: change language .js for ExtJS according to BE language (thanks to Stefano Cecere)

2009-11-29  Francois Suter  <francois@typo3.org>

	* Fixed bug #12727: Wrong htmlspecialchars() usage in Extension Manager (thanks to Andreas Kundoch)
	* Fixed bug #12498: t3lib_div::flushOutputBuffers() can't work (thanks to Steffen Gebert)
	* Fixed bug #12831: Scheduler: Wrong CSH text for "End of task" (thanks to Steffen Gebert)

2009-11-29  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12786: Wrong mouseover cursor at icon of docheader (thanks to Georg Ringer)
	* Fixed bug #12792: Unit test checkGetExtensionKeyByPrefix of the t3lib_extmgm_testcase fails
	* Fixed bug #11326: Memcached backend does not work well if cache of a page shall expire after 30 days (thanks to Vladimir Podkovanov)
	* Fixed bug #11345: Uncaught exception InvalidArgumentException on creating graphical menus
	* Fixed bug #12489: IRRE - Problem with clearing of floated elements in IE
	* Fixed bug #12788: Recycler does not show up
	* Fixed bug #12825: Wrong encoding of labels in t3editor
	* Fixed bug #12766: CSS in "User Settings" broken (thanks to Georg Ringer)
	* Fixed bug #9766: Use correct memory limit definition in Install Tool (thanks to Steffen Mueller)