@@ -39,6 +39,7 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	public function setUp() {
 		$this->fixture = new t3lib_PageRenderer();
+		$this->fixture->setCharSet('utf-8');
 	}
 
 	public function tearDown() {
@@ -60,17 +61,17 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 			$this->fixture instanceof t3lib_PageRenderer
 		);
 	}
-	
+
 	//////////////////////
 	// test functions
 	//////////////////////
 
 	/**
 	* test set xml prolog and doctype
-	* 
+	*
 	*/
 	public function testSetXmlPrologAndDocType() {
-		
+
 		$expectedReturnValue = '<?xml version="1.0" encoding="utf-8" ?>';
 		$this->fixture->setXmlPrologAndDocType('<?xml version="1.0" encoding="utf-8" ?>');
 		$out = $this->fixture->render();
@@ -83,10 +84,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	/**
 	* test set title
-	* 
+	*
 	*/
 	public function testSetTitle() {
-		
+
 		$expectedReturnValue = '<title>This is the title</title>';
 		$this->fixture->setTitle('This is the title');
 		$out = $this->fixture->render();
@@ -99,10 +100,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	/**
 	* test set charset
-	* 
+	*
 	*/
 	public function testSetCharset() {
-		
+
 		$expectedReturnValue = '<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />';
 		$this->fixture->setCharset('utf-8');
 		$out = $this->fixture->render();
@@ -115,10 +116,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	/**
 	* test set favicon
-	* 
+	*
 	*/
 	public function testSetFavIcon() {
-		
+
 		$expectedReturnValue1 = '<link rel="shortcut icon" href="http://google.com/favicon.ico" />';
 		$expectedReturnValue2 = '<link rel="icon" href="http://google.com/favicon.ico" />';
 		$this->fixture->setFavIcon('http://google.com/favicon.ico');
@@ -132,15 +133,15 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 			$expectedReturnValue2,
 			$out
 		);
-		
+
 	}
 
 	/**
 	* test set baseUrl
-	* 
+	*
 	*/
 	public function testSetBaseUrl() {
-		
+
 		$expectedReturnValue = '<base href="http://ggogle.com/" />';
 		$this->fixture->setBaseUrl('http://ggogle.com/');
 		$out = $this->fixture->render();
@@ -153,10 +154,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	/**
 	* test add meta tag
-	* 
+	*
 	*/
 	public function testAddMetaTag() {
-		
+
 		$expectedReturnValue = '<meta name="author" content="Anna Lyse">';
 		$this->fixture->addMetaTag('<meta name="author" content="Anna Lyse">');
 		$out = $this->fixture->render();
@@ -169,10 +170,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	/**
 	* test add inline comment
-	* 
+	*
 	*/
 	public function testAddInlineComment() {
-		
+
 		$expectedReturnValue = 'this is an inline comment written by unit test';
 		$this->fixture->addInlineComment('this is an inline comment written by unit test');
 		$out = $this->fixture->render();
@@ -185,10 +186,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	/**
 	* test add header data
-	* 
+	*
 	*/
 	public function testAddHeaderData() {
-		
+
 		$expectedReturnValue = '<tag method="private" name="test" />';
 		$this->fixture->addHeaderData('<tag method="private" name="test" />');
 		$out = $this->fixture->render();
@@ -201,10 +202,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	/**
 	* test add footer data
-	* 
+	*
 	*/
 	public function testAddFooterData() {
-		
+
 		$expectedReturnValue = '<tag method="private" name="test" />';
 		$this->fixture->addFooterData('<tag method="private" name="test" />');
 		$out = $this->fixture->render(t3lib_PageRenderer::PART_FOOTER);
@@ -217,10 +218,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	/**
 	* test add JS library file
-	* 
+	*
 	*/
 	public function testAddJsLibrary() {
-		
+
 		$expectedReturnValue = '<script src="fileadmin/test.js" type="text/javascript"></script>';
 		$this->fixture->addJsLibrary('test', 'fileadmin/test.js');
 		$out = $this->fixture->render();
@@ -230,14 +231,14 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 			$out
 		);
 	}
-	
-	
+
+
 	/**
 	* test add JS footer library file
-	* 
+	*
 	*/
 	public function testAddJsFooterLibrary() {
-		
+
 		$expectedReturnValue = '<script src="fileadmin/test.js" type="text/javascript"></script>';
 		$this->fixture->addJsFooterLibrary('test', 'fileadmin/test.js');
 		$out = $this->fixture->render(t3lib_PageRenderer::PART_FOOTER);
@@ -250,10 +251,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	/**
 	* test add JS file
-	* 
+	*
 	*/
 	public function testAddJsFile() {
-		
+
 		$expectedReturnValue = '<script src="fileadmin/test.js" type="text/javascript"></script>';
 		$this->fixture->addJsFile('fileadmin/test.js');
 		$out = $this->fixture->render();
@@ -266,10 +267,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	/**
 	* test add JS file for footer
-	* 
+	*
 	*/
 	public function testAddJsFooterFile() {
-		
+
 		$expectedReturnValue = '<script src="fileadmin/test.js" type="text/javascript"></script>';
 		$this->fixture->addJsFooterFile('fileadmin/test.js');
 		$out = $this->fixture->render(t3lib_PageRenderer::PART_FOOTER);
@@ -282,10 +283,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	/**
 	* test add JS inline
-	* 
+	*
 	*/
 	public function testAddJsInlineCode() {
-		
+
 		$expectedReturnValue = 'var x = "testvar"';
 		$this->fixture->addJsInlineCode('test', 'var x = "testvar"');
 		$out = $this->fixture->render();
@@ -298,10 +299,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	/**
 	* test add JS inline for footer
-	* 
+	*
 	*/
 	public function testAddJsFooterInlineCode() {
-		
+
 		$expectedReturnValue = 'var x = "testvar"';
 		$this->fixture->addJsFooterInlineCode('test', 'var x = "testvar"');
 		$out = $this->fixture->render(t3lib_PageRenderer::PART_FOOTER);
@@ -314,10 +315,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	/**
 	* test add JS handler
-	* 
+	*
 	*/
 	public function testAddExtOnReadyCode() {
-		
+
 		$expectedReturnValue1 = 'Ext.onReady(function() {';
 		$expectedReturnValue2 = 'var x = "testvar";';
 		$this->fixture->loadExtJS();
@@ -328,20 +329,20 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 			$expectedReturnValue1,
 			$out
 		);
-		
+
 		$this->assertContains(
 			$expectedReturnValue2,
 			$out
 		);
-		
+
 	}
 
 	/**
 	* test add CSS file
-	* 
+	*
 	*/
 	public function testAddCssFile() {
-		
+
 		$expectedReturnValue = '<link rel="stylesheet" type="text/css" href="fileadmin/test.css" media="screen" />';
 		$this->fixture->addCssFile('fileadmin/test.css');
 		$out = $this->fixture->render();
@@ -354,10 +355,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	/**
 	* test add CSS inline
-	* 
+	*
 	*/
 	public function testAddCssInlineBlock() {
-		
+
 		$expectedReturnValue = 'body {margin:20px;}';
 		$this->fixture->addCssInlineBlock('general', 'body {margin:20px;}');
 		$out = $this->fixture->render();
@@ -370,10 +371,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	/**
 	* test add CSS inline and force on top
-	* 
+	*
 	*/
 	public function testAddCssInlineBlockForceOnTop() {
-		
+
 		$expectedReturnValue = '/*general1*/' . chr(10) . 'h1 {margin:20px;}' . chr(10) . '/*general*/' . chr(10) . 'body {margin:20px;}';
 		$this->fixture->addCssInlineBlock('general', 'body {margin:20px;}');
 		$this->fixture->addCssInlineBlock('general1', 'h1 {margin:20px;}', NULL, TRUE);
@@ -387,10 +388,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
     /**
     * test load prototype
-    * 
+    *
     */
   	public function testLoadPrototype() {
-		
+
 		$expectedReturnValue = '<script src="contrib/prototype/prototype.js" type="text/javascript"></script>';
 		$this->fixture->loadPrototype();
 		$out = $this->fixture->render();
@@ -403,10 +404,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	/**
 	* test load Scriptaculous
-	* 
+	*
 	*/
 	public function testLoadScriptaculous() {
-		
+
 		$expectedReturnValue = '<script src="contrib/scriptaculous/scriptaculous.js?load=effects,controls,slider" type="text/javascript"></script>';
 		$this->fixture->loadScriptaculous('slider,controls');
 		$out = $this->fixture->render();
@@ -419,10 +420,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 
 	/**
 	* test load ExtJS
-	* 
+	*
 	*/
     public function testLoadExtJS() {
-		
+
 		$expectedReturnValue = '<script src="contrib/extjs/adapter/jquery/ext-jquery-adapter.js" type="text/javascript"></script>' . chr(10) . '<script src="contrib/extjs/ext-all.js" type="text/javascript"></script>';
 		$this->fixture->loadExtJS(TRUE, TRUE, 'jquery');
 		$out = $this->fixture->render();
@@ -432,13 +433,13 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 			$out
 		);
 	}
-	
+
 	/**
 	* test load ExtCore
-	* 
+	*
 	*/
 	public function testLoadExtCore() {
-		
+
 		$expectedReturnValue = '<script src="contrib/extjs/ext-core.js" type="text/javascript"></script>';
 		$this->fixture->loadExtCore();
 		$out = $this->fixture->render();
@@ -448,13 +449,13 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 			$out
 		);
 	}
-	
+
 	/**
-	* test enable ExtJsDebug  
-	* 
+	* test enable ExtJsDebug
+	*
 	*/
 	public function testEnableExtJsDebug() {
-		
+
 		$expectedReturnValue = '<script src="contrib/extjs/adapter/jquery/ext-jquery-adapter.js" type="text/javascript"></script>' . chr(10) . '<script src="contrib/extjs/ext-all-debug.js" type="text/javascript"></script>';
 		$this->fixture->loadExtJS(TRUE, TRUE, 'jquery');
 		$this->fixture->enableExtJsDebug();
@@ -465,13 +466,13 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 			$out
 		);
 	}
-	
+
 	/**
 	* test enable ExtCoreDebug
-	* 
+	*
 	*/
-   	public function testEnableExtCoreDebug() {	
-		
+   	public function testEnableExtCoreDebug() {
+
 		$expectedReturnValue = '<script src="contrib/extjs/ext-core-debug.js" type="text/javascript"></script>';
 		$this->fixture->loadExtCore();
 		$this->fixture->enableExtCoreDebug();
@@ -482,13 +483,13 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 			$out
 		);
 	}
-	
+
 	/**
 	* test inline language label
-	* 
+	*
 	*/
 	public function testAddInlineLanguageLabel() {
-		
+
 		$expectedReturnValue = 'TYPO3.lang = {"myKey":"myValue"}';
 		$this->fixture->loadExtJS();
 		$this->fixture->addInlineLanguageLabel('myKey', 'myValue');
@@ -500,13 +501,13 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 			$out
 		);
 	}
-	
+
 	/**
 	* test inline language label as array
-	* 
+	*
 	*/
 	public function testAddInlineLanguageLabelArray() {
-		
+
 		$expectedReturnValue = 'TYPO3.lang = {"myKey1":"myValue1","myKey2":"myValue2"}';
 		$this->fixture->loadExtJS();
 		$this->fixture->addInlineLanguageLabelArray(array('myKey1' => 'myValue1', 'myKey2' => 'myValue2',));
@@ -518,13 +519,13 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 			$out
 		);
 	}
-	
+
 	/**
 	* test inline language label as array get merged
-	* 
+	*
 	*/
 	public function testAddInlineLanguageLabelArrayMerged() {
-		
+
 		$expectedReturnValue = 'TYPO3.lang = {"myKey1":"myValue1","myKey2":"myValue2"}';
 		$this->fixture->loadExtJS();
 		$this->fixture->addInlineLanguageLabelArray(array('myKey1' => 'myValue1',));
@@ -537,13 +538,13 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 			$out
 		);
 	}
-	
+
 	/**
 	* test inline setting
-	* 
+	*
 	*/
 	public function testAddInlineSetting() {
-		
+
 		$expectedReturnValue = 'TYPO3.settings = {"myApp":{"myKey":"myValue"}};';
 		$this->fixture->loadExtJS();
 		$this->fixture->addInlineSetting('myApp', 'myKey', 'myValue');
@@ -555,13 +556,13 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 			$out
 		);
 	}
-	
+
 	/**
 	* test inline settings with array
-	* 
+	*
 	*/
 	public function testAddInlineSettingArray() {
-		
+
 		$expectedReturnValue = 'TYPO3.settings = {"myApp":{"myKey1":"myValue1","myKey2":"myValue2"}};';
 		$this->fixture->loadExtJS();
 		$this->fixture->addInlineSettingArray('myApp', array('myKey1' => 'myValue1', 'myKey2' => 'myValue2',));
@@ -573,13 +574,13 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 			$out
 		);
 	}
-	
+
 	/**
 	* test inline settings with array get merged
-	* 
+	*
 	*/
 	public function testAddInlineSettingArrayMerged() {
-		
+
 		$expectedReturnValue = 'TYPO3.settings = {"myApp":{"myKey1":"myValue1","myKey2":"myValue2"}};';
 		$this->fixture->loadExtJS();
 		$this->fixture->addInlineSettingArray('myApp', array('myKey1' => 'myValue1',));
@@ -592,10 +593,10 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 			$out
 		);
 	}
-	
+
 	/**
 	* test add body content
-	* 
+	*
 	*/
 	public function testAddBodyContent() {
 		$expectedReturnValue = 'ABCDE';
@@ -604,29 +605,29 @@ class t3lib_PageRenderer_testcase extends tx_phpunit_testcase {
 		$this->fixture->addBodyContent('C');
 		$this->fixture->addBodyContent('D');
 		$this->fixture->addBodyContent('E');
-		
+
 		$out = $this->fixture->getBodyContent();
 		$this->assertEquals(
 			$expectedReturnValue,
 			$out
 		);
 	}
-	
-	
+
+
 	/**
 	* test set body content
-	* 
+	*
 	*/
 	public function testSetBodyContent() {
 		$expectedReturnValue = 'ABCDE';
 		$this->fixture->setBodyContent('ABCDE');
-		
+
 		$out = $this->fixture->getBodyContent();
 		$this->assertEquals(
 			$expectedReturnValue,
 			$out
 		);
-		
+
 		$out = $this->fixture->render();
 
 		$this->assertContains(
