@@ -1,5 +1,6 @@
 2009-11-30  Steffen Kamper  <info@sk-typo3.de>
 
+	* Fixed bug #12843: Mulitple tests of the t3lib_PageRenderer_testcase fail
 	* Fixed bug #12541: Unescaped & in urls of list module
 
 2009-11-30  Oliver Hader  <oliver@typo3.org>
